# smo-duktape

./: Makefile  MakefileNSO  switch.specs
include/: mem.h  str.h
include/al/: util.hpp
include/duktape/: duk_config.h
include/fl/: logger.h  packet.h
include/fl/scripting/: scripting.h
include/game/Player/: PlayerActorHakoniwa.h
patches/: stagescene.slpatch
scripts/: genPatch.py
server/: CMakeLists.txt
server/include/: packet.h  server.h  types.h
server/src/: packet.cpp  server.cpp  types.cpp
source/: duktape.c  main.cpp  module.cpp
source/fl/: logger.cpp  packet.cpp  server.cpp
source/fl/scripting/: scripting.cpp
